@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import com.devonfw.tools.ide.context.AbstractIdeContextTest;
 import com.devonfw.tools.ide.context.IdeTestContext;
+import com.devonfw.tools.ide.tool.node.Node;
 import com.github.tomakehurst.wiremock.junit5.WireMockRuntimeInfo;
 import com.github.tomakehurst.wiremock.junit5.WireMockTest;
 
@@ -25,12 +26,30 @@ class YarnTest extends AbstractIdeContextTest {
 
     // arrange
     IdeTestContext context = newContext(PROJECT_YARN, wireMockRuntimeInfo);
-    Yarn commandlet = new Yarn(context);
+    Yarn yarn = context.getCommandletManager().getCommandlet(Yarn.class);
 
     // act
-    commandlet.install();
+    yarn.install();
 
     // assert
+    checkInstallation(context);
+  }
+
+  @Test
+  void testYarnInstallWhenNpmInstalled(WireMockRuntimeInfo wireMockRuntimeInfo) {
+
+    // arrange
+    IdeTestContext context = newContext(PROJECT_YARN, wireMockRuntimeInfo);
+    Node node = context.getCommandletManager().getCommandlet(Node.class);
+    Yarn yarn = context.getCommandletManager().getCommandlet(Yarn.class);
+
+    // act
+    node.install();
+    yarn.install();
+
+    // assert
+    assertThat(context).logAtDebug()
+        .hasMessageContaining("npm' using bash with arguments 'list' '-g' 'yarn' '--depth=0'"); // since npm was installed this should be called
     checkInstallation(context);
   }
 
@@ -44,16 +63,16 @@ class YarnTest extends AbstractIdeContextTest {
 
     // arrange
     IdeTestContext context = newContext(PROJECT_YARN, wireMockRuntimeInfo);
-    Yarn commandlet = new Yarn(context);
+    Yarn yarn = context.getCommandletManager().getCommandlet(Yarn.class);
 
     // act I
-    commandlet.install();
+    yarn.install();
 
     // assert I
     checkInstallation(context);
 
     // act II
-    commandlet.uninstall();
+    yarn.uninstall();
 
     // assert II
     assertThat(context).logAtInfo().hasMessageContaining("npm uninstall -g yarn");
@@ -71,11 +90,11 @@ class YarnTest extends AbstractIdeContextTest {
 
     // arrange
     IdeTestContext context = newContext(PROJECT_YARN, wireMockRuntimeInfo);
-    Yarn commandlet = new Yarn(context);
-    commandlet.arguments.setValue("--version");
+    Yarn yarn = context.getCommandletManager().getCommandlet(Yarn.class);
+    yarn.arguments.setValue("--version");
 
     // act
-    commandlet.run();
+    yarn.run();
 
     // assert
     assertThat(context).logAtInfo().hasMessageContaining("yarn --version");
@@ -84,7 +103,7 @@ class YarnTest extends AbstractIdeContextTest {
 
   private void checkInstallation(IdeTestContext context) {
 
-    assertThat(context).logAtInfo().hasMessageContaining("npm install -gf yarn@2.4.3");
+    assertThat(context).logAtInfo().hasMessage("npm install -gf yarn@2.4.3");
     assertThat(context).logAtSuccess().hasMessageContaining("Setting npm config prefix to: " + context.getSoftwarePath().resolve("node") + " was successful");
     assertThat(context).logAtSuccess().hasMessageContaining("Successfully installed yarn in version 2.4.3");
   }
