@@ -11,6 +11,7 @@ Release with new features and bugfixes:
 * https://github.com/devonfw/IDEasy/issues/1602[#1602]: Being offline can block ide startup
 * https://github.com/devonfw/IDEasy/issues/1667[#1667]: ide command without arguments triggers download and installation
 * https://github.com/devonfw/IDEasy/issues/1677[#1677]: Add release for linux-arm architecture
+* https://github.com/devonfw/IDEasy/issues/1679[#1679]: Npm based commandlets fail to determine installed version of npm tool
 
 The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/39?closed=1[milestone 2026.01.001].
 
